twirssi requires installing perl module... don't care enough

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -6,5 +6,10 @@
 <li><a href="http://www.google.com/">Google</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>config</h2>
+<ul>
+<li><a href="http://shearer.org/MTA_Comparison">MTA Comparison - Granizada</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
