added java to PATH

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -4,11 +4,14 @@
 <h2>Miscellaneous</h2>
 <ul>
 <li><a href="http://www.google.com/">Google</a>
+<li><a href="http://non-gnu.uvt.nl/pub/uvt-unix-doc/ssh-harden.txt">ssh-harden.txt</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 <h2>config</h2>
 <ul>
 <li><a href="http://shearer.org/MTA_Comparison">MTA Comparison - Granizada</a>
+<li><a href="http://wiki.archlinux.org/index.php/Mutt">Mutt - ArchWiki</a>
+<li><a href="http://non-gnu.uvt.nl/pub/uvt-unix-doc/ssh-harden.txt">ssh-harden.txt</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 </body>
