--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -19,6 +19,9 @@
 <li><a href="http://wiki.archlinux.org/index.php/Dwm">Dwm - ArchWiki</a>
 <li><a href="http://wiki.archlinux.org/index.php/Allow_multiple_programs_to_play_sound_at_once">Allowing Multiple Programs to Play Sound - ArchWiki</a>
 <li><a href="http://wiki.archlinux.org/index.php/ALSA">Advanced Linux Sound Architecture - ArchWiki</a>
+<li><a href="http://wiki.archlinux.org/index.php/X">Xorg - ArchWiki</a>
+<li><a href="http://pbrisbin.com/pages/uber-mutt.html">pbrisbin - Uber-Mutt</a>
+<li><a href="http://wiki.archlinux.org/index.php/Intel">Intel - ArchWiki</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 </body>
