w3m bookmarks git server

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -24,5 +24,17 @@
 <li><a href="http://wiki.archlinux.org/index.php/Intel">Intel - ArchWiki</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>troub-shooting</h2>
+<ul>
+<li><a href="http://dpaste.de/ASGb/">dpaste.de: Snippet #44537</a>
+<!--End of section (do not delete this comment)-->
+</ul>
+<h2>gitserv</h2>
+<ul>
+<li><a href="http://progit.org/book/ch4-8.html">Pro Git - Pro Git 4.8 Git on the Server Gitolite</a>
+<li><a href="http://github.com/sitaramc/gitolite#readme">sitaramc's gitolite at pu - GitHub</a>
+<li><a href="http://www.kernel.org/pub/software/scm/git/docs/git-daemon.html">git-daemon(1)</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
