xorg dev bookmark

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -36,5 +36,10 @@
 <li><a href="http://www.kernel.org/pub/software/scm/git/docs/git-daemon.html">git-daemon(1)</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>dev reading</h2>
+<ul>
+<li><a href="http://www.x.org/wiki/Development/">X.Org Wiki - Development</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
