ruby and lova bookmarks

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -41,5 +41,15 @@
 <li><a href="http://www.x.org/wiki/Development/">X.Org Wiki - Development</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>lova</h2>
+<ul>
+<li><a href="http://bridgeterrante.com/">bridget errante</a>
+<!--End of section (do not delete this comment)-->
+</ul>
+<h2>ruby</h2>
+<ul>
+<li><a href="file:///home/jzacsh/docs/ruby/why.s.poignant.guide-0.5/index.html">Why's (Poignant) Guide to Ruby</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
