ruby and arch laptop-bookmarks

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -22,6 +22,8 @@
 <li><a href="http://wiki.archlinux.org/index.php/X">Xorg - ArchWiki</a>
 <li><a href="http://pbrisbin.com/pages/uber-mutt.html">pbrisbin - Uber-Mutt</a>
 <li><a href="http://wiki.archlinux.org/index.php/Intel">Intel - ArchWiki</a>
+<li><a href="https://wiki.archlinux.org/index.php/Laptop">Laptop - ArchWiki</a>
+<li><a href="https://wiki.archlinux.org/index.php/CPU_Frequency_Scaling">Cpufrequtils - ArchWiki</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 <h2>troub-shooting</h2>
@@ -39,6 +41,12 @@
 <h2>dev reading</h2>
 <ul>
 <li><a href="http://www.x.org/wiki/Development/">X.Org Wiki - Development</a>
+<!--End of section (do not delete this comment)-->
+</ul>
+<h2>ruby</h2>
+<ul>
+<li><a href="http://ruby-doc.org/docs/ProgrammingRuby/html/index.html">Programming Ruby: The Pragmatic Programmer's Guide</a>
+<li><a href="http://ruby-doc.org/docs/ProgrammingRuby/html/tut_io.html">Programming Ruby: IO.File objects</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 </body>
