--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -51,5 +51,10 @@
 <li><a href="file:///home/jzacsh/docs/ruby/why.s.poignant.guide-0.5/index.html">Why's (Poignant) Guide to Ruby</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>current why</h2>
+<ul>
+<li><a href="file:///home/jzacsh/docs/ruby/why.s.poignant.guide-0.5/chapter-3.html#section1">Why's (Poignant) Guide to Ruby :: 3. A Quick (and Hopefully Painless) Ride Through Ruby (with Cartoon Foxes)</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
