ruby in 20 minutes. bookmark

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -53,6 +53,7 @@
 <li><a href="file:///home/jzacsh/docs/ruby/why.s.poignant.guide-0.5/index.html">Why's (Poignant) Guide to Ruby</a>
 <li><a href="http://ruby-doc.org/docs/ProgrammingRuby/html/index.html">Programming Ruby: The Pragmatic Programmer's Guide</a>
 <li><a href="http://ruby-doc.org/docs/ProgrammingRuby/html/tut_io.html">Programming Ruby: IO.File objects</a>
+<li><a href="http://www.ruby-lang.org/en/documentation/quickstart">Ruby in Twenty Minutes</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 <h2>current why</h2>
