python section to w3m bookmarks.

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -61,5 +61,11 @@
 <li><a href="file:///home/jzacsh/docs/ruby/why.s.poignant.guide-0.5/chapter-3.html#section1">Why's (Poignant) Guide to Ruby :: 3. A Quick (and Hopefully Painless) Ride Through Ruby (with Cartoon Foxes)</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>python</h2>
+<ul>
+<li><a href="http://greenteapress.com/thinkpython/html/index.html">Think Python</a>
+<li><a href="http://greenteapress.com/thinkpython/html/index.html">Think Python (html)</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
