xfce config wiki page

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -24,6 +24,7 @@
 <li><a href="http://wiki.archlinux.org/index.php/Intel">Intel - ArchWiki</a>
 <li><a href="https://wiki.archlinux.org/index.php/Laptop">Laptop - ArchWiki</a>
 <li><a href="https://wiki.archlinux.org/index.php/CPU_Frequency_Scaling">Cpufrequtils - ArchWiki</a>
+<li><a href="https://wiki.archlinux.org/index.php/Xfce">Xfce Config</a>
 <!--End of section (do not delete this comment)-->
 </ul>
 <h2>troub-shooting</h2>
