d7cx bookmarks for drupal 7 codesprint work.

--- a/.w3m/bookmark.html
+++ b/.w3m/bookmark.html
@@ -68,5 +68,11 @@
 <li><a href="http://greenteapress.com/thinkpython/html/index.html">Think Python (html)</a>
 <!--End of section (do not delete this comment)-->
 </ul>
+<h2>d7cx</h2>
+<ul>
+<li><a href="http://drupal.org/files/issues/995686.patch">995686.patch html5_tools</a>
+<li><a href="http://drupal.org/node/924766">D7 Patch | elements module</a>
+<!--End of section (do not delete this comment)-->
+</ul>
 </body>
 </html>
